--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "workbox-webpack-plugin": "^7.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
